PROJECT (swarm)

CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -W -Wall -Wextra")

FILE (READ "${CMAKE_CURRENT_SOURCE_DIR}/debian/changelog" DEBCHANGELOG)
STRING (REGEX MATCH "([0-9]+\\.[0-9]+\\.[0-9]+)" DEBFULLVERSION "${DEBCHANGELOG}")
STRING (REGEX MATCH "([0-9]+)" SWARM_VERSION_ABI "${DEBFULLVERSION}")

SET (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules)

FIND_PACKAGE (Uriparser REQUIRED)
FIND_PACKAGE (Boost COMPONENTS system filesystem thread REQUIRED)
FIND_PACKAGE (LibIDN REQUIRED)
FIND_PACKAGE (Blackhole REQUIRED)

INCLUDE_DIRECTORIES (
	${Uriparser_INCLUDE_DIRS}
	${LibIDN_INCLUDE_DIRS}
	${Boost_INCLUDE_DIRS}
	${Blackhole_INCLUDE_DIRS}
	${CMAKE_CURRENT_SOURCE_DIR}/include
	${CMAKE_CURRENT_SOURCE_DIR}/src
)

FILE (GLOB_RECURSE SWARM_SRC_LIST RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "src/*.cpp")
ADD_LIBRARY (swarm SHARED ${SWARM_SRC_LIST})

TARGET_LINK_LIBRARIES (swarm
	${Boost_LIBRARIES}
	${Uriparser_LIBRARIES}
	${LibIDN_LIBRARIES}
)

SET_TARGET_PROPERTIES (swarm
	PROPERTIES
	VERSION ${DEBFULLVERSION}
	SOVERSION ${SWARM_VERSION_ABI}
)

INSTALL (
	DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/swarm
	DESTINATION ${CMAKE_INSTALL_PREFIX}/include/
)

INSTALL (
	TARGETS swarm
	LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}
)
