CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

SET (TESTS_LIBRARY_PATH "${CMAKE_CURRENT_BINARY_DIR}:${CMAKE_CURRENT_BINARY_DIR}/../:${CMAKE_CURRENT_BINARY_DIR}/../swarm:${CMAKE_CURRENT_BINARY_DIR}/../thevoid")
SET (TESTS_LINK_FLAGS "-Wl,-rpath,${TESTS_LIBRARY_PATH}")
SET (TESTS_PROPERTIES PROPERTIES LINK_FLAGS "${TESTS_LINK_FLAGS}" LINKER_LANGUAGE CXX)
SET (TESTS_LIBRARIES swarm thevoid)
SET (TESTS_ENV
    LD_LIBRARY_PATH=${TESTS_LIBRARY_PATH}:$ENV{LD_LIBRARY_PATH} PYTHONDONTWRITEBYTECODE=1)

SET (Python_ADDITIONAL_VERSIONS "2.7")
FIND_PACKAGE (PythonInterp)

SET (PYTESTS_FLAGS "-v" "-l" "-x" "-s")


INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})

FILE (GLOB_RECURSE HANDLERS_SRC RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "handlers/*.cpp")

ADD_EXECUTABLE (test_server ${HANDLERS_SRC} handlers_factory.cpp server.cpp)
SET_TARGET_PROPERTIES (test_server ${TESTS_PROPERTIES})
TARGET_LINK_LIBRARIES (test_server ${TESTS_LIBRARIES})
ADD_DEPENDENCIES (test_server swarm thevoid)

ADD_CUSTOM_TARGET (check
    COMMAND virtualenv -p "${PYTHON_EXECUTABLE}" . &&
        . bin/activate &&
        export LD_LIBRARY_PATH=.:.. &&
        pip install -r ${CMAKE_CURRENT_SOURCE_DIR}/requirements.txt &&
        ${TESTS_ENV} py.test ${PYTESTS_FLAGS} ${CMAKE_CURRENT_SOURCE_DIR}
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    DEPENDS test_server)
